# trojan_ic

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
examples/: client.json-example
src/: main.cpp
src/core/: authenticator.cpp  config.cpp  config.h  service.cpp  version.cpp
src/session/: clientsession.cpp  clientsession.h  forwardsession.cpp  natsession.cpp  serversession.cpp  serversession.h  session.h  udpforwardsession.cpp
src/session/proxy/: basicproxy.hpp  proxyauth.hpp
src/ssl/: sslsession.cpp
