cmake_minimum_required(VERSION 3.7.2)
project(trojan_ic)
set(CMAKE_CXX_STANDARD 11)
    # set(CMAKE_LINK_SEARCH_START_STATIC ON)
    # set(CMAKE_LINK_SEARCH_END_STATIC ON)
    set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive -Wl,-Bdynamic")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

if(WIN32)
   message("this is WIN32.......")
else()
   message("this is not WIN32!!!!")
endif()
if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else()
    add_definitions(-Wall -Wextra)
endif()

file(GLOB_RECURSE CPP_LIST src/*.cpp)

add_executable(trojan_ic ${CPP_LIST})
target_include_directories(trojan_ic PRIVATE src)

# if(__MINGW32__)
    # set(CMAKE_LINK_SEARCH_START_STATIC ON)
    # set(CMAKE_LINK_SEARCH_END_STATIC ON)
    # message("use mingw...")
# endif()

# set(THREADS_PREFER_PTHREAD_FLAG ON)
# find_package(Threads REQUIRED)
# target_link_libraries(trojan_ic ${CMAKE_THREAD_LIBS_INIT})

set(Boost_USE_STATIC_LIBS "ON")
set(OPENSSL_USE_STATIC_LIBS TRUE)
if(APPLE)
    set(OPENSSL_SSL_LIBRARY "/usr/local/opt/openssl@1.1/lib/libssl.a")
    set(OPENSSL_CRYPTO_LIBRARY "/usr/local/opt/openssl@1.1/lib/libcrypto.a")
    find_package(Boost 1.66.0 REQUIRED COMPONENTS system program_options)
elseif(WIN32)
    set(OPENSSL_SSL_LIBRARY "C:\\cygnus\\openssl-1.1.1j\\libssl.a")
    set(OPENSSL_CRYPTO_LIBRARY "C:\\cygnus\\openssl-1.1.1j\\libcrypto.a")
    set(BOOST_LIBRARYDIR "C:\\boost\\boost_1.71.0_mingw\\lib")
    set(Boost_INCLUDE_DIR "C:\\boost\\boost_1.71.0_mingw\\include\\boost-1_71")
    set(Boost_USE_MULTITHREADED      ON)
    set(Boost_ARCHITECTURE "-x64")
    set(Boost_COMPILER "-mgw81")
    
    set(Boost_DEBUG ON)
    find_package(Boost 1.6.6 REQUIRED  COMPONENTS system program_options)
    # message("LIBRARIES:  " ${Boost_LIBRARY_DIRS})
    # link_directories(${BOOST_LIBRARYDIR})
    # set(Boost_USE_STATIC_LIBS ON)
endif()
include_directories(${Boost_INCLUDE_DIR})
set(DEFAULT_CONFIG "config.json")

target_link_libraries(trojan_ic Boost::system Boost::program_options)
if(MSVC)
    add_definitions(-DBOOST_DATE_TIME_NO_LIB)
endif()
if(APPLE)
set(OPENSSL_ROOT_DIR $OPENSSL_ROOT_DIR "/usr/local/opt/openssl@1.1/")
elseif(WIN32)
set(OPENSSL_ROOT_DIR $OPENSSL_ROOT_DIR "C:\\cygnus\\openssl-1.1.1j")
endif()

find_package(OpenSSL 1.1.0 REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR})
message("OPENSSL_LIBRARIES:" ${OPENSSL_LIBRARIES})
target_link_libraries(trojan_ic ${OPENSSL_LIBRARIES})
# target_link_libraries(trojan_ic "C:/cygnus/openssl-1.1.1j/libssl.a" "C:/cygnus/openssl-1.1.1j/libcrypto.a")
if(OPENSSL_VERSION VERSION_GREATER_EQUAL 1.1.1)
    option(ENABLE_SSL_KEYLOG "Build with SSL KeyLog support" ON)
    if(ENABLE_SSL_KEYLOG)
        add_definitions(-DENABLE_SSL_KEYLOG)
    endif()

    option(ENABLE_TLS13_CIPHERSUITES "Build with TLS1.3 ciphersuites support" ON)
    if(ENABLE_TLS13_CIPHERSUITES)
        add_definitions(-DENABLE_TLS13_CIPHERSUITES)
    endif()
endif()

#option(ENABLE_MYSQL "Build with MySQL support" ON)
#if(ENABLE_MYSQL)
#    find_package(MySQL REQUIRED)
#    include_directories(${MYSQL_INCLUDE_DIR})
#    target_link_libraries(trojan ${MYSQL_LIBRARIES})
#    add_definitions(-DENABLE_MYSQL)
#endif()

option(FORCE_TCP_FASTOPEN "Force build with TCP Fast Open support" OFF)
if(FORCE_TCP_FASTOPEN)
    add_definitions(-DTCP_FASTOPEN=23 -DTCP_FASTOPEN_CONNECT=30)
endif()

if(CMAKE_SYSTEM_NAME STREQUAL Linux)
    option(ENABLE_NAT "Build with NAT support" ON)
    if(ENABLE_NAT)
        add_definitions(-DENABLE_NAT)
    endif()

    option(ENABLE_REUSE_PORT "Build with SO_REUSEPORT support" ON)
    if(ENABLE_REUSE_PORT)
        add_definitions(-DENABLE_REUSE_PORT)
    endif()
endif()

if(APPLE)
    find_library(CoreFoundation CoreFoundation)
    find_library(Security Security)
    target_link_libraries(trojan_ic ${CoreFoundation} ${Security})
endif()

if(WIN32)
    target_link_libraries(trojan_ic wsock32 ws2_32 crypt32)
else()
    set(SYSTEMD_SERVICE AUTO CACHE STRING "Install systemd service")
    set_property(CACHE SYSTEMD_SERVICE PROPERTY STRINGS AUTO ON OFF)
    set(SYSTEMD_SERVICE_PATH /lib/systemd/system CACHE PATH "Systemd service path")
    if(SYSTEMD_SERVICE STREQUAL AUTO)
        if(EXISTS /usr/lib/systemd/system)
            set(SYSTEMD_SERVICE ON)
            set(SYSTEMD_SERVICE_PATH /usr/lib/systemd/system CACHE PATH "Systemd service path" FORCE)
        elseif(EXISTS /lib/systemd/system)
            set(SYSTEMD_SERVICE ON)
            set(SYSTEMD_SERVICE_PATH /lib/systemd/system CACHE PATH "Systemd service path" FORCE)
        endif()
    endif()

    include(GNUInstallDirs)
    install(TARGETS trojan_ic DESTINATION ${CMAKE_INSTALL_BINDIR})
    install(FILES examples/server.json-example DESTINATION ${CMAKE_INSTALL_FULL_SYSCONFDIR}/trojan_ic RENAME config.json)
    set(DEFAULT_CONFIG ${CMAKE_INSTALL_FULL_SYSCONFDIR}/trojan/config.json CACHE STRING "Default config path")
    add_definitions(-DDEFAULT_CONFIG="${DEFAULT_CONFIG}")
    install(FILES docs/trojan.1 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
    install(DIRECTORY docs/ DESTINATION ${CMAKE_INSTALL_DOCDIR} FILES_MATCHING PATTERN "*.md")
    install(DIRECTORY examples DESTINATION ${CMAKE_INSTALL_DOCDIR} FILES_MATCHING PATTERN "*.json-example")
    if(SYSTEMD_SERVICE STREQUAL ON)
        set(CONFIG_NAME config)
        configure_file(examples/trojan.service-example trojan.service)
        set(CONFIG_NAME %i)
        configure_file(examples/trojan.service-example trojan@.service)
        install(FILES ${CMAKE_BINARY_DIR}/trojan.service ${CMAKE_BINARY_DIR}/trojan@.service DESTINATION ${SYSTEMD_SERVICE_PATH})
    endif()

    enable_testing()
    add_test(NAME LinuxSmokeTest-basic
             COMMAND bash ${CMAKE_SOURCE_DIR}/tests/LinuxSmokeTest/basic.sh ${CMAKE_BINARY_DIR}/trojan)
    add_test(NAME LinuxSmokeTest-fake-client
             COMMAND bash ${CMAKE_SOURCE_DIR}/tests/LinuxSmokeTest/fake-client.sh ${CMAKE_BINARY_DIR}/trojan)
endif()
